fix: collapse firstload style

--- a/cooper-theme/menu/style.scss
+++ b/cooper-theme/menu/style.scss
@@ -73,14 +73,6 @@
     cursor: pointer;
   }
 
-  .coo-collapse-item {
-    overflow: auto;
-  }
-
-  .coo-collapse-item-content {
-    overflow: auto;
-  }
-
   // submenu取消下划线
   .coo-menu-item {
     &:after {
